--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 *{
-    font-family: "Roboto Condensed", serif;
+    font-family:'Courier New', Courier, monospace;
     margin: 0;
     padding: 0;}
     .main{
