--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
         background-color: cadetblue;
           background-position: center;
         background-size: cover;
-        height: 650px;
+        height: 680px;
     
     }
     .navbar{
@@ -42,6 +42,7 @@
         position: absolute;
         right: 100px;
         bottom: 0;
+        padding-bottom: 20px;
         
     
     
